--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
@@ -530,7 +530,7 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-कालक्रमेणेति ॥ अथ कालक्रमेण । गच्छता कालेनेत्यर्थः । तयोर्मेनकाहिमवतोः स्वरुपयोग्ये सौन्दर्यानुगुणे । यद्वा रुप्यते निश्चीयतेऽनेनेति रुपं ज्ञानं तद्योग्ये । शास्त्रानुसारिणात्यर्थः । सुरतप्रसङ्गे सुरतकर्मणि प्रवृत्ते सति मनोरमं यौवनमुद्वहन्त्या भूधरराजपत्न्या मेनकाया गर्भोऽभवत् ॥ 1. 19 ॥
+कालक्रमेणेति ॥ अथ कालक्रमेण । गच्छता कालेनेत्यर्थः । तयोर्मेनकाहिमवतोः स्वरुपयोग्ये सौन्दर्यानुगुणे । यद्वा रुप्यते निश्चीयतेऽनेनेति रूपं ज्ञानं तद्योग्ये । शास्त्रानुसारिणात्यर्थः । सुरतप्रसङ्गे सुरतकर्मणि प्रवृत्ते सति मनोरमं यौवनमुद्वहन्त्या भूधरराजपत्न्या मेनकाया गर्भोऽभवत् ॥ 1. 19 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -860,8 +860,10 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अभ्युन्नताङ्गुष्ठनखप्रभाभिर्निक्षेपणाद्रागमिवोद्गिरन्तौ ।  
-आजह्रृतुस्तच्चरणौ पृथिव्यां स्थलारविन्दश्रियमव्यवस्थाम् ॥ 1. 33 ॥  
+अभ्युन्नताङ्गुष्ठ-नख-प्रभाभिर्  
+निक्षेपणाद् रागम् इवोद्गिरन्तौ।  
+**आजह्रतुस् तच्-चरणौ** पृथिव्यां  
+**स्थलारविन्द-श्रियम्** अ-व्यवस्थाम्॥३३॥
 </details>
 
 <details><summary>मूलम्</summary>
@@ -882,8 +884,11 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सा राजहंसैरिव संनताङ्गी गतेषु लीलाञ्चितविक्रमेषु ।  
-व्यनीयत प्रत्युपदेशलुब्धै रादित्सुभिर्नूपुरसिञ्जितानि ॥ 1. 34 ॥   
+**सा राजहंसैर् इव** संनताङ्गी  
+गतेषु लीलाञ्चित-विक्रमेषु।  
+**व्यनीयत** प्रत्युपदेश-लुब्धैर्  
+आदित्सुभिर् नूपुर-सिञ्जितानि ॥३४॥  
++++(५)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -904,8 +909,11 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-वृत्तानुपूर्वे न च चातिदीर्धे जङ्घे शुभे सृष्टवतस्तदीये ।  
-शेषाङ्गनिर्माणविधौ विधातुर्लावण्य उत्पाद्य इवास यत्नः ॥ 1. 35 ॥   
+वृत्तानुपूर्वे+++(=वृत्तानुकारिण्योः)+++ च न चातिदीर्धे  
+**जङ्घे शुभे** सृष्टवतस् तदीये।  
+शेषाङ्ग-निर्माण-विधौ विधातुर्  
+लावण्य+++(य्)+++ उत्पाद्य+++(य्)+++ इवास **यत्नः** ॥३५॥  
++++(उत्प्रेक्षा ४)+++
 </details>
 
 <details><summary>मूलम्</summary>
@@ -921,29 +929,32 @@ title = "०१"
 
 <details><summary>मल्लिनाथः</summary>
 
-वृत्तेति । वृत्ते वर्तुले पूर्वमनुगतेऽनुपूर्वे । गोपुच्छाकार इत्यर्थः । वृत्ते च ते अनुपूर्वे च वृत्तानुपूर्वे नातिदीर्धे च । महाविभाषया न समासः । नञो विशेषणत्वं चशब्दप्रयोगादेव ज्ञेयम् । शुभे मङ्गले । तस्या इमे तदीये जङ्घे प्रसृते । 'जङ्घा तु प्रसृता' इत्यमरः । सृष्टवतो निर्मितवतो विधातुः स्त्रष्टुः शेषाङ्गनिर्माणविधौ । जङ्घाव्यतिरिक्तावयवनिर्माणार्थमित्यर्थः । उत्पाद्ये पुनः संपाद्ये लावण्ये कान्तिविशेषविषये । लावण्यलक्षणं तूक्तम् (25) श्लेक टीo। यत्न आसेव बभूवेवेत्युत्प्रेक्षा । उपादानमन्तरेण कायंस्य दुष्करत्वात्तदङ्गानां न लावण्योपादानकत्वात्पूर्वसंपादितस्य च जङ्घार्थमेव कार्त्स्त्येन विनियोगात्पुनर्लावण्यसंपादने यत्नः स्यादेवेत्येतादृक्सौन्दर्ये दज्जङ्गे इति भावः । आसेति बभूवार्थे 'तिङन्तप्रतिरुपकमव्ययम्' इत्याह शाकटायनः । वल्लभस्तु- 'न तिङन्तप्रतिरुपकमव्ययम्' 'अस्तेर्भूः' इति भ्वादेशनियमात्तादृक्तिङन्तस्यैवाभावात् । किंतु कवीनामयं प्रामादिकः प्रयेगः' इत्याह । वामनस्तु- 'अस गतिदोप्त्यादानेष्वितिः धातोर्लिदि रुपमिदम्' इत्याह । अस इत्यनुदात्तेद्दीप्त्यर्थे आस दिदोपे । प्रवृत्त इत्यर्थः ॥ 1. 35 ॥
+वृत्तेति । वृत्ते वर्तुले पूर्वमनुगतेऽनुपूर्वे । गोपुच्छाकार इत्यर्थः । वृत्ते च ते अनुपूर्वे च वृत्तानुपूर्वे नातिदीर्धे च । महाविभाषया न समासः । नञो विशेषणत्वं चशब्दप्रयोगादेव ज्ञेयम् । शुभे मङ्गले । तस्या इमे तदीये जङ्घे प्रसृते । 'जङ्घा तु प्रसृता' इत्यमरः । सृष्टवतो निर्मितवतो विधातुः स्त्रष्टुः शेषाङ्गनिर्माणविधौ । जङ्घाव्यतिरिक्तावयवनिर्माणार्थमित्यर्थः । **उत्पाद्ये** पुनः संपाद्ये **लावण्ये** कान्तिविशेषविषये । लावण्यलक्षणं तूक्तम् (25) श्लेक टीo। यत्न आसेव बभूवेवेत्युत्प्रेक्षा । उपादानमन्तरेण कायंस्य दुष्करत्वात्तदङ्गानां न लावण्योपादानकत्वात्पूर्वसंपादितस्य च जङ्घार्थमेव कार्त्स्त्येन विनियोगात्पुनर्लावण्यसंपादने यत्नः स्यादेवेत्येतादृक्सौन्दर्ये दज्जङ्गे इति भावः । आसेति बभूवार्थे 'तिङन्तप्रतिरुपकमव्ययम्' इत्याह शाकटायनः । वल्लभस्तु- 'न तिङन्तप्रतिरुपकमव्ययम्' 'अस्तेर्भूः' इति भ्वादेशनियमात्तादृक्तिङन्तस्यैवाभावात् । किंतु कवीनामयं प्रामादिकः प्रयेगः' इत्याह । वामनस्तु- 'अस गतिदोप्त्यादानेष्वितिः धातोर्लिदि रुपमिदम्' इत्याह । अस इत्यनुदात्तेद्दीप्त्यर्थे आस दिदोपे । प्रवृत्त इत्यर्थः ॥ 1. 35 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-नाग्रेन्द्रहस्तास्त्वचि कर्कशत्वादेकान्तशैत्यात्कदलीविशेषाः ।  
-लब्ध्वापि लोके परिणाहि रुपं जातास्तदूर्वेरुपमानबाह्याः ॥ 1. 36 ॥   
+**नाग्रेन्द्र-हस्तास्** त्वचि कर्कशत्वाद्,  
+एकान्त-शैत्यात् **कदली**-विशेषाः।  
+लब्ध्वापि लोके परिणाहि+++(=वैपुल्यवद्)+++ रूपं  
+जातास् **तद्-ऊर्वोर् उपमान-बाह्याः** ॥३६॥  
++++(४)+++
 </details>
 
 <details><summary>मूलम्</summary>
 
 नाग्रेन्द्रहस्तास्त्वचि कर्कशत्वादेकान्तशैत्यात्कदलीविशेषाः ।  
-लब्ध्वापि लोके परिणाहि रुपं जातास्तदूर्वेरुपमानबाह्याः ॥ 1. 36 ॥   
+लब्ध्वापि लोके परिणाहि रूपं जातास्तदूर्वेरुपमानबाह्याः ॥ 1. 36 ॥   
 </details>
 
 <details><summary>अन्वयः</summary>
 
-नागेन्द्रहस्ताः त्वचि कर्कशत्वात्, कदलीविशेषाः एकान्तशैत्यात् लोके परिणाहि रुपं लब्ध्वा अपि तदूर्वोः उपमानबाह्याः जाताः ।  
+नागेन्द्रहस्ताः त्वचि कर्कशत्वात्, कदलीविशेषाः एकान्तशैत्यात् लोके परिणाहि रूपं लब्ध्वा अपि तदूर्वोः उपमानबाह्याः जाताः ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-नागेन्द्रेति । नागेन्द्राणामैरावतादीनां हस्ताः करास्त्वचि चर्मणि कर्कशत्वात्कदलीविशेषा रामरम्भादय एकान्तशएत्यान्नियतशैत्याद्धेतोः लोके परिणाहि वैपुल्ययुक्तम् । 'परिणाहो विशालता' इत्यमरः । रुपं लब्ध्वापि । अपिशब्दात्करिकदलीमात्रस्य तादृक्परिणाहो नास्तीति भावः । तस्या ऊर्वोस्तदूर्वोरुपमानबाह्या जाता उपमानक्रियानर्हा बभृवुः । तदूर्वोन कार्कश्यं नाप्येकान्तशैत्यमिति भावः ॥ 1. 36 ॥
+नागेन्द्रेति । नागेन्द्राणामैरावतादीनां हस्ताः करास्त्वचि चर्मणि कर्कशत्वात्कदलीविशेषा रामरम्भादय एकान्तशएत्यान्नियतशैत्याद्धेतोः लोके परिणाहि वैपुल्ययुक्तम् । 'परिणाहो विशालता' इत्यमरः । रूपं लब्ध्वापि । अपिशब्दात्करिकदलीमात्रस्य तादृक्परिणाहो नास्तीति भावः । तस्या ऊर्वोस्तदूर्वोरुपमानबाह्या जाता उपमानक्रियानर्हा बभृवुः । तदूर्वोन कार्कश्यं नाप्येकान्तशैत्यमिति भावः ॥ 1. 36 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
