--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
@@ -1326,7 +1326,7 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-उमेति ॥ ते कार्यार्थिनो यूयं संयमस्तिमितं समाधिनिश्चलं शंभोर्मन उमारुपेणोमासौन्दर्येण 'रुपं स्वभावे सौन्दर्ये नाणके पशुशब्दयोः । ग्रन्थावृत्तौ नाटकादावाकारश्लोकयोरपि ॥' इति विश्वः । अयस्कान्तेन मणिविशेषेण । 'कस्कादिषु च' इति सकारः । लोहवदयोधातमिव। 'तेन तुल्यं क्रिया चेद्वतिः' इति वतिप्रत्ययो मृग्यः आक्रष्टुमाहर्तु यतध्वमुद्युक्ता भवत ॥ 2.59 ॥
+उमेति ॥ ते कार्यार्थिनो यूयं संयमस्तिमितं समाधिनिश्चलं शंभोर्मन उमारुपेणोमासौन्दर्येण 'रूपं स्वभावे सौन्दर्ये नाणके पशुशब्दयोः । ग्रन्थावृत्तौ नाटकादावाकारश्लोकयोरपि ॥' इति विश्वः । अयस्कान्तेन मणिविशेषेण । 'कस्कादिषु च' इति सकारः । लोहवदयोधातमिव। 'तेन तुल्यं क्रिया चेद्वतिः' इति वतिप्रत्ययो मृग्यः आक्रष्टुमाहर्तु यतध्वमुद्युक्ता भवत ॥ 2.59 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
