--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
@@ -617,7 +617,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-सद्य इति । मधुर्वसन्त एवेषुकारः प्रवालोद्‌गमाः पल्लवाङ्कुरा एव चारुणि पत्त्राणिपक्षा यस्य तस्मिन् । 'पत्त्रं वाहनपक्षयोः' इत्यमरः । नवं चूतं चूतकुसुमं तदेव बाणस्तस्मिन्नवचूतबाणे समात्पिं नीते सति सद्यो मनोभवस्य धन्विनो नामाक्षराणीव, द्विरेफान्भ्रमरान्निवेशयामास निदधौ । अत्र प्रवालपत्र इत्याद्येक्देशविवर्तिरुपकं मधोरिषुकारत्वं रुपं यन्नामाक्षराणीवेत्युत्प्रेक्षायां निमित्तमित्येकदेशविवर्तिरुपकोत्थापितेयमृत्प्रेक्षा ॥ 3.27 ॥
+सद्य इति । मधुर्वसन्त एवेषुकारः प्रवालोद्‌गमाः पल्लवाङ्कुरा एव चारुणि पत्त्राणिपक्षा यस्य तस्मिन् । 'पत्त्रं वाहनपक्षयोः' इत्यमरः । नवं चूतं चूतकुसुमं तदेव बाणस्तस्मिन्नवचूतबाणे समात्पिं नीते सति सद्यो मनोभवस्य धन्विनो नामाक्षराणीव, द्विरेफान्भ्रमरान्निवेशयामास निदधौ । अत्र प्रवालपत्र इत्याद्येक्देशविवर्तिरुपकं मधोरिषुकारत्वं रूपं यन्नामाक्षराणीवेत्युत्प्रेक्षायां निमित्तमित्येकदेशविवर्तिरुपकोत्थापितेयमृत्प्रेक्षा ॥ 3.27 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1150,7 +1150,7 @@ title = "०३"
 
 <details><summary>मल्लिनाथः</summary>
 
-- स्मरेति । स्मरः कामस्तथाभूतं पूर्वोक्तरुपं मनसाप्यधृष्यमयुग्मनेत्रं विषमाक्षमदूरात्पश्यन् । साध्वसेन सन्नहस्तो विश्लथपाणिः सन् । स्वहस्तात्स्त्रस्तं शरं चापमपि चापं च नालक्षयन्न विवेद । भीतो मुह्यतीति भावः ॥ 3.51 ॥
+- स्मरेति । स्मरः कामस्तथाभूतं पूर्वोक्तरूपं मनसाप्यधृष्यमयुग्मनेत्रं विषमाक्षमदूरात्पश्यन् । साध्वसेन सन्नहस्तो विश्लथपाणिः सन् । स्वहस्तात्स्त्रस्तं शरं चापमपि चापं च नालक्षयन्न विवेद । भीतो मुह्यतीति भावः ॥ 3.51 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
