--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/04.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/04.md
@@ -206,7 +206,7 @@ title = "०४"
 
 <details><summary>मल्लिनाथः</summary>
 
-हृदय इति । हृदये वससीति स्मरवाक्यानुवादः । इत्येवं रुपं मत्प्रियं यदवोच उक्तवानसि । ब्रञो लुङि 'वच उम्' इत्युमागमः । तत्कैतवमवैमि मिथ्येति मन्ये । इदं वचनमुपचापरपदं परस्य रञ्जनार्थं यदसत्यभाषणं स उपचारस्तस्य पदं स्थानम् । कैतवस्थानमिति यावत् । न चेत्त्वमनङ्गोऽशरीरः । कथं रतिरक्षताऽविनष्टा । आश्रयनाशेऽप्याश्रितमविनष्टमिति विरोधादिति भावः ॥ 4.9 ॥
+हृदय इति । हृदये वससीति स्मरवाक्यानुवादः । इत्येवं रूपं मत्प्रियं यदवोच उक्तवानसि । ब्रञो लुङि 'वच उम्' इत्युमागमः । तत्कैतवमवैमि मिथ्येति मन्ये । इदं वचनमुपचापरपदं परस्य रञ्जनार्थं यदसत्यभाषणं स उपचारस्तस्य पदं स्थानम् । कैतवस्थानमिति यावत् । न चेत्त्वमनङ्गोऽशरीरः । कथं रतिरक्षताऽविनष्टा । आश्रयनाशेऽप्याश्रितमविनष्टमिति विरोधादिति भावः ॥ 4.9 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -975,24 +975,24 @@ title = "०४"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इत्थं रतेः किमपि भूतमदृश्यरुपं मन्दीचकार मरणाव्यवसायबुद्धिम् ।  
+इत्थं रतेः किमपि भूतमदृश्यरूपं मन्दीचकार मरणाव्यवसायबुद्धिम् ।  
 तत्प्रत्ययाच्च कुसुमायुधबन्धुरेना माश्चासयत्सुचरितार्थपदैर्वचोभिः ॥ 4.45 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-इत्थं रतेः किमपि भूतमदृश्यरुपं मन्दीचकार मरणाव्यवसायबुद्धिम् ।  
+इत्थं रतेः किमपि भूतमदृश्यरूपं मन्दीचकार मरणाव्यवसायबुद्धिम् ।  
 तत्प्रत्ययाच्च कुसुमायुधबन्धुरेना माश्चासयत्सुचरितार्थपदैर्वचोभिः ॥ 4.45 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-इत्थम् अदृश्यरुपं किमपि भूतं रतेः मरणव्यवसायबुर्द्धि मन्दीचकार । अथ कुसुमायुधबन्धुः तत्प्रत्ययात् एनां सु चरिताऽर्थपदैः वचोभिः आश्वासयत् ।  
+इत्थम् अदृश्यरूपं किमपि भूतं रतेः मरणव्यवसायबुर्द्धि मन्दीचकार । अथ कुसुमायुधबन्धुः तत्प्रत्ययात् एनां सु चरिताऽर्थपदैः वचोभिः आश्वासयत् ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-- इत्यमिति ॥ इत्थमनेन प्रकारेणादृश्यरुपं किमपि भूतं कशिचतप्राणी । 'युक्तेक्ष्मादावृते भूतं प्राण्यतोते समे त्रिषु' इत्यमरः । रतेर्मदनदाराणां मरणव्यवसायबुद्धिं मरणोद्योगबुद्धिं मन्दीचकार । निवारयामासेत्यर्थः । 'मूढाल्पापटुनिर्भाग्या मन्दाः' इत्यमरः । अथ कुसुमायुधबन्धुर्वसन्तश्च तत्प्रत्ययात्तस्मिन्भूते विश्वसात् । 'प्रत्ययोऽधीनशपथज्ञानविश्वासहेतुषु' इत्यमरः । एनां रतिं सुष्ठु चरितार्थानि पदानि येषां तैर्वचोभिर्वाक्यैराश्वासयत् । सर्वथा ते देवताप्रसादात्प्रियसंगमो भविष्यतीत्यादिवचनैरस्या दुःखपाचकारेत्यर्थः ॥ 4.45 ॥
+- इत्यमिति ॥ इत्थमनेन प्रकारेणादृश्यरूपं किमपि भूतं कशिचतप्राणी । 'युक्तेक्ष्मादावृते भूतं प्राण्यतोते समे त्रिषु' इत्यमरः । रतेर्मदनदाराणां मरणव्यवसायबुद्धिं मरणोद्योगबुद्धिं मन्दीचकार । निवारयामासेत्यर्थः । 'मूढाल्पापटुनिर्भाग्या मन्दाः' इत्यमरः । अथ कुसुमायुधबन्धुर्वसन्तश्च तत्प्रत्ययात्तस्मिन्भूते विश्वसात् । 'प्रत्ययोऽधीनशपथज्ञानविश्वासहेतुषु' इत्यमरः । एनां रतिं सुष्ठु चरितार्थानि पदानि येषां तैर्वचोभिर्वाक्यैराश्वासयत् । सर्वथा ते देवताप्रसादात्प्रियसंगमो भविष्यतीत्यादिवचनैरस्या दुःखपाचकारेत्यर्थः ॥ 4.45 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
