--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -10,23 +10,23 @@ title = "०५"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तथा समक्षं दहता मनोभवं पिनाकिना भग्नमनोरथा सतीं ।  
-निनिन्द रुपं हृदयेन पार्वती प्रियेषु सौभाग्यफला हि चारुता ॥ 5.1 ॥  
+निनिन्द रूपं हृदयेन पार्वती प्रियेषु सौभाग्यफला हि चारुता ॥ 5.1 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 तथा समक्षं दहता मनोभवं पिनाकिना भग्नमनोरथा सतीं ।  
-निनिन्द रुपं हृदयेन पार्वती प्रियेषु सौभाग्यफला हि चारुता ॥ 5.1 ॥  
+निनिन्द रूपं हृदयेन पार्वती प्रियेषु सौभाग्यफला हि चारुता ॥ 5.1 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-पार्वती तथा समक्षं मनोभवं दहता पिनाकिना भग्नमनोरथा सती हृतयेन रुपं निनिन्द; हि चारुता प्रियेषु सौभग्यफला (भवति)।  
+पार्वती तथा समक्षं मनोभवं दहता पिनाकिना भग्नमनोरथा सती हृतयेन रूपं निनिन्द; हि चारुता प्रियेषु सौभग्यफला (भवति)।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-तथेति ॥ पर्वतस्यापत्यं स्त्री पार्वती तथा तेन प्रकारेणाक्ष्णोः समीपे समक्षं पुरतः । 'अव्ययं विभक्तिसमीपसमृद्धी-' त्यादिनाव्ययीभावः । मनोभवं मन्मथं दहता भस्मीकुर्वता पुनाकिनेश्वरेण भग्नः खण्डितो मनोरथोऽभिलाषो यस्याः सा तथोक्ता सती हृदयेन मनसा रुपं सौन्दर्यं निनिन्द । 'धिङ् मे रुपं यद्धरमनोहरणाय नालमिति गर्हतवतीत्यर्थः' । यक्तं चैतदित्याह-तथाहि । चारुता सैन्दर्यं प्रियेषु विषये सौभाग्यं प्रियवाल्लभ्यं फलं यस्याः सा तथोक्ता । सौ    न्दर्यस्य तदेव फलं यद्भर्तृसौभाग्यं लभ्यते । नो चेद्विफलं तदिति भावः । अस्मिन्सर्गे वंशस्थं वृत्तम्- 'जतौ तु वंशस्थमुदीरितं जरौ' इति लक्षणात् ॥ 5.1 ॥
+तथेति ॥ पर्वतस्यापत्यं स्त्री पार्वती तथा तेन प्रकारेणाक्ष्णोः समीपे समक्षं पुरतः । 'अव्ययं विभक्तिसमीपसमृद्धी-' त्यादिनाव्ययीभावः । मनोभवं मन्मथं दहता भस्मीकुर्वता पुनाकिनेश्वरेण भग्नः खण्डितो मनोरथोऽभिलाषो यस्याः सा तथोक्ता सती हृदयेन मनसा रूपं सौन्दर्यं निनिन्द । 'धिङ् मे रूपं यद्धरमनोहरणाय नालमिति गर्हतवतीत्यर्थः' । यक्तं चैतदित्याह-तथाहि । चारुता सैन्दर्यं प्रियेषु विषये सौभाग्यं प्रियवाल्लभ्यं फलं यस्याः सा तथोक्ता । सौ    न्दर्यस्य तदेव फलं यद्भर्तृसौभाग्यं लभ्यते । नो चेद्विफलं तदिति भावः । अस्मिन्सर्गे वंशस्थं वृत्तम्- 'जतौ तु वंशस्थमुदीरितं जरौ' इति लक्षणात् ॥ 5.1 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -795,12 +795,12 @@ title = "०५"
 
 <details><summary>अन्वयः</summary>
 
-हे पार्वति ! 'रुपं पापवृत्तये न' इति यत् उच्यते, तद् वचः अव्यभिचारि । तथाहि हे उदारदर्शने ! ते शीलं तपस्विनाम् अपि उपदैशतां गतम् ।  
+हे पार्वति ! 'रूपं पापवृत्तये न' इति यत् उच्यते, तद् वचः अव्यभिचारि । तथाहि हे उदारदर्शने ! ते शीलं तपस्विनाम् अपि उपदैशतां गतम् ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-यदिति । हे पार्वति ! रुपं सौम्याकृतिः पापवृत्तये पापाचरणाय न भवतीति यदुच्यते । लोकैरिति शेषः । तद्वचो न व्यभिचरति न स्खलतीत्यव्यभिचारि सत्यम् । 'यत्राकृतिस्तत्र गुणाः' 'न सुरुपाः पापसमाचारा भवन्ति' इत्यादयो लोकवादा न विसंवादमासादयन्तीत्यर्थः । क्मिति ज्ञायते-तथाहि । हे उदारदर्शने आयताक्षि ! सुरुपे इत्यर्थः । अथवोन्नतज्ञोने । विकेकवतीत्यर्थः । ते तव शीलं सद्वृत्तम् । 'शीलं स्वभावे सद्वृत्ते' इत्यमरः । तपस्विनामप्युपदिश्यतेऽनेनेत्युपदेशः प्रवर्तकं प्रमाणं तत्तामुपदेशतां गतं प्राप्तम् । मुनयोऽपि, त्वां वीक्ष्य स्ववृत्तै प्रवर्तन्त इति भावः ॥ 5.36 ॥
+यदिति । हे पार्वति ! रूपं सौम्याकृतिः पापवृत्तये पापाचरणाय न भवतीति यदुच्यते । लोकैरिति शेषः । तद्वचो न व्यभिचरति न स्खलतीत्यव्यभिचारि सत्यम् । 'यत्राकृतिस्तत्र गुणाः' 'न सुरुपाः पापसमाचारा भवन्ति' इत्यादयो लोकवादा न विसंवादमासादयन्तीत्यर्थः । क्मिति ज्ञायते-तथाहि । हे उदारदर्शने आयताक्षि ! सुरुपे इत्यर्थः । अथवोन्नतज्ञोने । विकेकवतीत्यर्थः । ते तव शीलं सद्वृत्तम् । 'शीलं स्वभावे सद्वृत्ते' इत्यमरः । तपस्विनामप्युपदिश्यतेऽनेनेत्युपदेशः प्रवर्तकं प्रमाणं तत्तामुपदेशतां गतं प्राप्तम् । मुनयोऽपि, त्वां वीक्ष्य स्ववृत्तै प्रवर्तन्त इति भावः ॥ 5.36 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1527,19 +1527,19 @@ title = "०५"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अयुक्तरुपं किमतः परं वद त्रिनेत्रवक्षः सुलभं तवापि यत् ।  
+अयुक्तरूपं किमतः परं वद त्रिनेत्रवक्षः सुलभं तवापि यत् ।  
 स्तनद्वयेऽस्मिन्हरिचन्दनास्पदे पदं चिताभस्मरजः करिष्यति ॥ 5.69 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-अयुक्तरुपं किमतः परं वद त्रिनेत्रवक्षः सुलभं तवापि यत् ।  
+अयुक्तरूपं किमतः परं वद त्रिनेत्रवक्षः सुलभं तवापि यत् ।  
 स्तनद्वयेऽस्मिन्हरिचन्दनास्पदे पदं चिताभस्मरजः करिष्यति ॥ 5.69 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-त्रिनेत्रवक्षः तव सुलभम् अपि, अतःपरम् अयुक्तरुपं किं ? वद यत् हरिचन्दनास्पदे अस्मिन् स्तनद्वये चिताभस्मरजः पदं करिष्यति ।  
+त्रिनेत्रवक्षः तव सुलभम् अपि, अतःपरम् अयुक्तरूपं किं ? वद यत् हरिचन्दनास्पदे अस्मिन् स्तनद्वये चिताभस्मरजः पदं करिष्यति ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
@@ -1593,14 +1593,14 @@ title = "०५"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-'कन्या वरयते रुपं, माता वित्तं, पिता श्रुतम् । बान्धवाः कुलमिच्छन्ति, मिष्टान्नमितरे जनाः ॥' इति लोकानामाभाषणम् । तत्र किचिदपि नास्तीत्याह-  
+'कन्या वरयते रूपं, माता वित्तं, पिता श्रुतम् । बान्धवाः कुलमिच्छन्ति, मिष्टान्नमितरे जनाः ॥' इति लोकानामाभाषणम् । तत्र किचिदपि नास्तीत्याह-  
 वपुर्विरुपाक्षमलक्ष्यजन्मता दिगम्बरत्वेन निवेदितं वसु ।  
 वरेषु यद्वालमृगाक्षि ! मृग्यते तदस्ति किं व्यस्तमपि त्रिलोचने ? ॥ 5.72 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-'कन्या वरयते रुपं, माता वित्तं, पिता श्रुतम् । बान्धवाः कुलमिच्छन्ति, मिष्टान्नमितरे जनाः ॥' इति लोकानामाभाषणम् । तत्र किचिदपि नास्तीत्याह-  
+'कन्या वरयते रूपं, माता वित्तं, पिता श्रुतम् । बान्धवाः कुलमिच्छन्ति, मिष्टान्नमितरे जनाः ॥' इति लोकानामाभाषणम् । तत्र किचिदपि नास्तीत्याह-  
 वपुर्विरुपाक्षमलक्ष्यजन्मता दिगम्बरत्वेन निवेदितं वसु ।  
 वरेषु यद्वालमृगाक्षि ! मृग्यते तदस्ति किं व्यस्तमपि त्रिलोचने ? ॥ 5.72 ॥  
 </details>
@@ -1753,14 +1753,14 @@ title = "०५"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अयुक्तरुपं किमतः परं वद (5/69) इति श्लोकोक्तं प्रत्याह-  
+अयुक्तरूपं किमतः परं वद (5/69) इति श्लोकोक्तं प्रत्याह-  
 तदङ्ग संसर्गमवाप्य कल्पते ध्रुवं चिताभस्मरजो विशुद्धये ।  
 तथाहि नृत्याभिनयक्रियाच्युतं विलिप्यते मौलिभिरम्बरौकसाम् ॥ 5.79 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-अयुक्तरुपं किमतः परं वद (5/69) इति श्लोकोक्तं प्रत्याह-  
+अयुक्तरूपं किमतः परं वद (5/69) इति श्लोकोक्तं प्रत्याह-  
 तदङ्ग संसर्गमवाप्य कल्पते ध्रुवं चिताभस्मरजो विशुद्धये ।  
 तथाहि नृत्याभिनयक्रियाच्युतं विलिप्यते मौलिभिरम्बरौकसाम् ॥ 5.79 ॥  
 </details>
