--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
@@ -26,7 +26,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-अथेति । अथ देवदेवानुग्रहानन्तरं गौरी पार्वती वश्वमात्मा स्वरुपं यस्येति । विश्वस्यात्मेति वा । विश्वात्मने शिवाय मिथो रहसि । 'मिथोऽन्योऽन्थं रहस्यपि' इत्यमरः । सखीं संदिदेशातिससर्ज । क्रियामात्रयोगेऽपि संप्रदानत्वाच्चतुर्थीं । किमिति । भूभृतां नाथो हिमवान्मे मम दाता सन् । प्रमाणीक्रियतामिति । दातृत्वेन प्रमाणीक्रियतामित्यर्थः । प्रार्थनायां लोट् । पित्रा दीयमानायाः परिग्रहो मम महाननुग्रह इति भावः ॥ 6.1 ॥
+अथेति । अथ देवदेवानुग्रहानन्तरं गौरी पार्वती वश्वमात्मा स्वरूपं यस्येति । विश्वस्यात्मेति वा । विश्वात्मने शिवाय मिथो रहसि । 'मिथोऽन्योऽन्थं रहस्यपि' इत्यमरः । सखीं संदिदेशातिससर्ज । क्रियामात्रयोगेऽपि संप्रदानत्वाच्चतुर्थीं । किमिति । भूभृतां नाथो हिमवान्मे मम दाता सन् । प्रमाणीक्रियतामिति । दातृत्वेन प्रमाणीक्रियतामित्यर्थः । प्रार्थनायां लोट् । पित्रा दीयमानायाः परिग्रहो मम महाननुग्रह इति भावः ॥ 6.1 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -451,7 +451,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-त्वदिति । वयं त्वया सम्भावितं सत्कृतं त्वत्संभावितमात्मानमात्मस्वरुपं बह्वधिकं यथा तथा मन्यामहे । तथाहि । उत्तमादरः सत्पुरुषकर्तृकः सत्कारः स्वगृणेषु विषये प्रायेण भूम्ना प्रत्ययं विश्वासमाधत्ते जनयति । सर्वस्यापि महाजनपरिग्रह एव पूज्यताहेतुरित्यर्थः ॥ 6.20 ॥
+त्वदिति । वयं त्वया सम्भावितं सत्कृतं त्वत्संभावितमात्मानमात्मस्वरूपं बह्वधिकं यथा तथा मन्यामहे । तथाहि । उत्तमादरः सत्पुरुषकर्तृकः सत्कारः स्वगृणेषु विषये प्रायेण भूम्ना प्रत्ययं विश्वासमाधत्ते जनयति । सर्वस्यापि महाजनपरिग्रह एव पूज्यताहेतुरित्यर्थः ॥ 6.20 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -495,19 +495,19 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-साक्षादिति । हे देव ! साक्षात्प्रत्यक्षेण दृष्टोऽसि । अञ्जसा पुनस्तत्त्वतस्तु त्वां वयं न विद्मः । दृश्यमानस्य रुपस्यातात्विकत्वादिति भावः । अतः प्रसीदानुगृहाण । आत्मानं निजस्वरुपं कथय । न चाकथितं तत्सुबोधमित्याह-धियां बुद्धीनां पथि न वर्तसे, अतस्त्वयैव त्वद्रूपं कथनीयमीत्यर्थः ॥ 6.22॥
+साक्षादिति । हे देव ! साक्षात्प्रत्यक्षेण दृष्टोऽसि । अञ्जसा पुनस्तत्त्वतस्तु त्वां वयं न विद्मः । दृश्यमानस्य रुपस्यातात्विकत्वादिति भावः । अतः प्रसीदानुगृहाण । आत्मानं निजस्वरूपं कथय । न चाकथितं तत्सुबोधमित्याह-धियां बुद्धीनां पथि न वर्तसे, अतस्त्वयैव त्वद्रूपं कथनीयमीत्यर्थः ॥ 6.22॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तात्त्विकं रुपं तावदास्तां न दृश्यमानमपि रुपं तत्त्वतो रुपयितुं शक्यमित्याह-  
+तात्त्विकं रूपं तावदास्तां न दृश्यमानमपि रूपं तत्त्वतो रुपयितुं शक्यमित्याह-  
 किं येन सृजसि व्यक्तमुत येन बिभर्षि तत् ।  
 अथ विश्वस्य संहर्ता भागाः कतम एष ते ॥ 6.23 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-तात्त्विकं रुपं तावदास्तां न दृश्यमानमपि रुपं तत्त्वतो रुपयितुं शक्यमित्याह-  
+तात्त्विकं रूपं तावदास्तां न दृश्यमानमपि रूपं तत्त्वतो रुपयितुं शक्यमित्याह-  
 किं येन सृजसि व्यक्तमुत येन बिभर्षि तत् ।  
 अथ विश्वस्य संहर्ता भागाः कतम एष ते ॥ 6.23 ॥  
 </details>
@@ -587,7 +587,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-विदितमिति । हे मुनयः ! काश्चिदपि मे प्रवृत्तयो व्यापाराः स्वार्था न भवन्ति यथा तथा वो युष्माकं विदितम् । वाक्यार्थः कर्म । बुद्धर्थत्वाद्वर्तमाने क्तः, तद्योगात्षष्ठी । प्रवृत्तिपारार्थ्ये प्रमाणमाह-अष्टाभिर्मूर्तिभिरित्थंभूतं इमं प्रकारं परार्थप्रवृत्तिरुपं प्राप्तः । 'भू प्राप्तो' इति धातोः कर्तरि क्तः । सूचितो ज्ञापितोऽस्मि । मत्स्वमूर्तिचेष्टया स्वपारार्थ्यमनुमेयमित्यर्थः ।  
+विदितमिति । हे मुनयः ! काश्चिदपि मे प्रवृत्तयो व्यापाराः स्वार्था न भवन्ति यथा तथा वो युष्माकं विदितम् । वाक्यार्थः कर्म । बुद्धर्थत्वाद्वर्तमाने क्तः, तद्योगात्षष्ठी । प्रवृत्तिपारार्थ्ये प्रमाणमाह-अष्टाभिर्मूर्तिभिरित्थंभूतं इमं प्रकारं परार्थप्रवृत्तिरूपं प्राप्तः । 'भू प्राप्तो' इति धातोः कर्तरि क्तः । सूचितो ज्ञापितोऽस्मि । मत्स्वमूर्तिचेष्टया स्वपारार्थ्यमनुमेयमित्यर्थः ।  
 </details>
 
 
@@ -1299,7 +1299,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-जङ्गममिति । हे मुनयः ! द्विरुपं जङ्गमस्थावरात्मकत्वाद् द्विप्रकारकमपि मे वपुर्विभक्तानुग्रहं विभज्य कृतप्रसादं मन्ये । कुतः । जंगमं वपुर्वो युष्माकं प्रैष्यभावे कैङ्कर्ये, स्थितमिति शेषः । 'प्रादूहोढोढ्येषैष्येषु वृद्धिर्वक्तव्या' इति वृद्धिः । 'नियोज्यकिंकरप्रैष्यभुजिष्यपरिचारकाः' इत्यमरः । स्थावरं वपुश्चरणाङ्कितम् । अथमेव हि महाननुग्रहो दासजनस्य यत्कर्मसु नियोजनं मूर्धनि पादन्यासश्चेति तात्पर्यार्थः ॥ 6.58 ॥
+जङ्गममिति । हे मुनयः ! द्विरूपं जङ्गमस्थावरात्मकत्वाद् द्विप्रकारकमपि मे वपुर्विभक्तानुग्रहं विभज्य कृतप्रसादं मन्ये । कुतः । जंगमं वपुर्वो युष्माकं प्रैष्यभावे कैङ्कर्ये, स्थितमिति शेषः । 'प्रादूहोढोढ्येषैष्येषु वृद्धिर्वक्तव्या' इति वृद्धिः । 'नियोज्यकिंकरप्रैष्यभुजिष्यपरिचारकाः' इत्यमरः । स्थावरं वपुश्चरणाङ्कितम् । अथमेव हि महाननुग्रहो दासजनस्य यत्कर्मसु नियोजनं मूर्धनि पादन्यासश्चेति तात्पर्यार्थः ॥ 6.58 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1696,7 +1696,7 @@ title = "०६"
 
 <details><summary>मल्लिनाथः</summary>
 
-कलितेति । येन शंभुना कलितं धृतिसंग्रहादिस्वस्वगुणसंपादितमन्योन्यसामर्थ्यं परस्परसहकाररुपं यैस्तथोक्तैः । स्वस्वरुपसामर्थ्यंमन्योन्याधेयमेवेति भावः । वृथिव्यादिभिरात्मभिः । अष्टाभिर्मूर्तिभिरित्यर्थः । इदं व्यक्तं विशवं धुरं वहन्तीति धुर्यैरश्वैः । 'धुरो यङ्ढको' इति यत्प्रत्ययः । अध्वनि यानं रथ इव ध्रियते ॥ 6.76 ॥
+कलितेति । येन शंभुना कलितं धृतिसंग्रहादिस्वस्वगुणसंपादितमन्योन्यसामर्थ्यं परस्परसहकाररूपं यैस्तथोक्तैः । स्वस्वरुपसामर्थ्यंमन्योन्याधेयमेवेति भावः । वृथिव्यादिभिरात्मभिः । अष्टाभिर्मूर्तिभिरित्यर्थः । इदं व्यक्तं विशवं धुरं वहन्तीति धुर्यैरश्वैः । 'धुरो यङ्ढको' इति यत्प्रत्ययः । अध्वनि यानं रथ इव ध्रियते ॥ 6.76 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
