--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/07.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/07.md
@@ -402,7 +402,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-रेखेति । सुविभक्तगात्र्याः सुसंश्लिष्टावयवायाः पार्वत्या रेखया मध्यगतया विभक्तगात्र्याः सुसंश्लिष्टावयवायाः पार्वत्या रेखया मध्यगतया विभक्तः सुश्लिष्टः किंचिदीषन्मधूच्छिष्टेन सिक्थकेन विमृष्टो विशेषेण निर्मलीकृते रागो यस्य स तथोक्तः । 'मधूच्छिष्टं तु सिक्धकम्' इति, 'निर्णिक्तं शोधितं मृष्टम् ।' इति चामरः । अन्यत्रोक्तम्- 'अलौहित्यापगमायाधरेषु सिक्थकलेपः क्रियते' । आसन्नं संनिहितं लावण्यफलं सौन्दर्यप्रयोजनं मुखचुम्बनादिरुपं यस्य स तथोक्तोऽधरोष्ठः स्फुरितैर्भाविशुभशंसिभिः स्पन्दैः कामप्यनिर्वाच्यार्माभख्यां शोभामपुष्यत्पुपोष । 'अभिख्या नामशोभयोः' इत्यमरः ॥ 7.18 ॥
+रेखेति । सुविभक्तगात्र्याः सुसंश्लिष्टावयवायाः पार्वत्या रेखया मध्यगतया विभक्तगात्र्याः सुसंश्लिष्टावयवायाः पार्वत्या रेखया मध्यगतया विभक्तः सुश्लिष्टः किंचिदीषन्मधूच्छिष्टेन सिक्थकेन विमृष्टो विशेषेण निर्मलीकृते रागो यस्य स तथोक्तः । 'मधूच्छिष्टं तु सिक्धकम्' इति, 'निर्णिक्तं शोधितं मृष्टम् ।' इति चामरः । अन्यत्रोक्तम्- 'अलौहित्यापगमायाधरेषु सिक्थकलेपः क्रियते' । आसन्नं संनिहितं लावण्यफलं सौन्दर्यप्रयोजनं मुखचुम्बनादिरूपं यस्य स तथोक्तोऽधरोष्ठः स्फुरितैर्भाविशुभशंसिभिः स्पन्दैः कामप्यनिर्वाच्यार्माभख्यां शोभामपुष्यत्पुपोष । 'अभिख्या नामशोभयोः' इत्यमरः ॥ 7.18 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -622,12 +622,12 @@ title = "०७"
 
 <details><summary>अन्वयः</summary>
 
-कृकती सभ्यः अद्रिः इच्छाविभूत्योः अनुरुपं तस्याः कृत्यम् अशेषयित्वा सुहृदास्थितायां सभायां वृषाऽङ्कागमनप्रतीक्षः (सन्) तस्थौ ।  
+कृकती सभ्यः अद्रिः इच्छाविभूत्योः अनुरूपं तस्याः कृत्यम् अशेषयित्वा सुहृदास्थितायां सभायां वृषाऽङ्कागमनप्रतीक्षः (सन्) तस्थौ ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-इच्छेति । कृती कुशलः । सभायां साधुः सभ्यः । 'सभाया यः' इति यप्रत्ययः । अद्रिर्हिमवानिच्छाविभूत्योरुत्साहैश्वर्ययोरनुरुपं सदृशं यथा तथा तस्याः पार्वत्याः कृत्यं कर्तव्यमशेषं निःशेषं कृत्वा । समाप्येत्यर्थः । अशेषशब्दात् 'तत्करोति' इति ण्यन्तात्क्त्वाप्रत्ययः । सुहृदास्थितायां बन्धुजनाक्रान्तायां सभायां संसदि वृषाङ्कस्य हरस्यागमनं प्रतीक्षत इति तथोक्तः सन् 'कर्मण्यण्' इत्यण् । तस्थ    ौ स्थितः ॥ 7.29 ॥
+इच्छेति । कृती कुशलः । सभायां साधुः सभ्यः । 'सभाया यः' इति यप्रत्ययः । अद्रिर्हिमवानिच्छाविभूत्योरुत्साहैश्वर्ययोरनुरूपं सदृशं यथा तथा तस्याः पार्वत्याः कृत्यं कर्तव्यमशेषं निःशेषं कृत्वा । समाप्येत्यर्थः । अशेषशब्दात् 'तत्करोति' इति ण्यन्तात्क्त्वाप्रत्ययः । सुहृदास्थितायां बन्धुजनाक्रान्तायां सभायां संसदि वृषाङ्कस्य हरस्यागमनं प्रतीक्षत इति तथोक्तः सन् 'कर्मण्यण्' इत्यण् । तस्थ    ौ स्थितः ॥ 7.29 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -644,12 +644,12 @@ title = "०७"
 
 <details><summary>अन्वयः</summary>
 
-तावत् कुबेरशैले तत्पूर्वपाणिग्रहणाऽनुरुपं प्रसाधनम् आदृताभिः मातृभिः पुरशासनस्य पुरस्तात् न्यस्तम् ।  
+तावत् कुबेरशैले तत्पूर्वपाणिग्रहणाऽनुरूपं प्रसाधनम् आदृताभिः मातृभिः पुरशासनस्य पुरस्तात् न्यस्तम् ।  
 </details>
 
 <details><summary>मल्लिनाथः</summary>
 
-तावदिति । तावत्, यावद् गौरीप्रसाधनं क्रियते तत्काल एवेत्यर्थः कुबेरशैले कैलासे । तदेव पूर्वं तत्पूर्व तच्च तत्पाणिग्रहणं तस्यानुरुपं प्रसाधनमलंकारसामग्री आदृताभिः । पुरं शास्तीति पुरशासनस्तस्य । कर्तरि ल्युट् । भवस्यापि पुरस्तादग्रे न्यस्तं निक्षिप्तम् ॥ 7.30 ॥
+तावदिति । तावत्, यावद् गौरीप्रसाधनं क्रियते तत्काल एवेत्यर्थः कुबेरशैले कैलासे । तदेव पूर्वं तत्पूर्व तच्च तत्पाणिग्रहणं तस्यानुरूपं प्रसाधनमलंकारसामग्री आदृताभिः । पुरं शास्तीति पुरशासनस्तस्य । कर्तरि ल्युट् । भवस्यापि पुरस्तादग्रे न्यस्तं निक्षिप्तम् ॥ 7.30 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -917,7 +917,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-मूर्ते इति । गङ्गा च यमुना च गङ्गायमुने मूर्ते विग्रहधारिण्यौ सचामरे चामरसहिते सत्यौ । अत एव समुद्रगा नदी तस्या रुपं स्वरुपं तस्य विपर्ययेऽप्यभावेऽपि सह हंसपातेन हंसचारेण वर्तेत इति सहंसपाते इव 'तेन सहेति तुल्ययोगे' इति बहुव्रीहिः । 'वोपसर्जनस्य' इति सभावः । लक्ष्यमाणे दृश्यमाने सत्यौ तदानीं विवाहसमये देवमसेविषातामभजताम् । सेवतेर्लङ् । गङ्गायमुने चामरग्राहिण्यौ देवमुपतस्थतुर्त्यर्थः ॥ 7.42 ॥
+मूर्ते इति । गङ्गा च यमुना च गङ्गायमुने मूर्ते विग्रहधारिण्यौ सचामरे चामरसहिते सत्यौ । अत एव समुद्रगा नदी तस्या रूपं स्वरूपं तस्य विपर्ययेऽप्यभावेऽपि सह हंसपातेन हंसचारेण वर्तेत इति सहंसपाते इव 'तेन सहेति तुल्ययोगे' इति बहुव्रीहिः । 'वोपसर्जनस्य' इति सभावः । लक्ष्यमाणे दृश्यमाने सत्यौ तदानीं विवाहसमये देवमसेविषातामभजताम् । सेवतेर्लङ् । गङ्गायमुने चामरग्राहिण्यौ देवमुपतस्थतुर्त्यर्थः ॥ 7.42 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1051,7 +1051,7 @@ title = "०७"
 
 <details><summary>मल्लिनाथः</summary>
 
-विश्वावस्थिति । विश्वावसुर्नाम कश्चिद् गन्धर्वो देवगायकस्तत्प्राग्रहरैस्तत्प्रमुखैः प्रवीणैः प्रकृष्टवीणैर्नीपुणैर्वा । 'प्रवीणे निपुणाभिज्ञविज्ञनिष्णातशिक्षिताः' इत्यमरः । त्रयाणां पुराणां समाहारस्त्रिपुरम् । 'तद्धितार्थोत्तरपदे-'त्याद्ना समाहारसमासः । 'पात्रादिभ्यः प्रतिषेधो वक्तव्यः' इति स्त्रीलिङ्गतानिषेधः । त्रिपुरस्य संबन्ध्यवदानं पूर्ववृत्तं कर्म विजयरुपं त्रिपुरावदानं तत्संगीयमानं स्तूयमानं यस्य स तथोक्तः । 'अवदानं कर्म वृत्तम्' इत्यमरः । ध्वान्तं तमः । मोह इति यावत् । तद्विकरेण रागादिना लङ्घ्योऽभिभवनीयो न भवतीत्यध्वान्तविकारलङ्घ्यः । विवाहादिकं तु तस्य लीलेत्यर्थः । ताराधिपखण्डधारी चन्द्रशेखरः शंभुरध्वानं मार्गं ततारात्यगच्छत् ॥ 7.48 ॥
+विश्वावस्थिति । विश्वावसुर्नाम कश्चिद् गन्धर्वो देवगायकस्तत्प्राग्रहरैस्तत्प्रमुखैः प्रवीणैः प्रकृष्टवीणैर्नीपुणैर्वा । 'प्रवीणे निपुणाभिज्ञविज्ञनिष्णातशिक्षिताः' इत्यमरः । त्रयाणां पुराणां समाहारस्त्रिपुरम् । 'तद्धितार्थोत्तरपदे-'त्याद्ना समाहारसमासः । 'पात्रादिभ्यः प्रतिषेधो वक्तव्यः' इति स्त्रीलिङ्गतानिषेधः । त्रिपुरस्य संबन्ध्यवदानं पूर्ववृत्तं कर्म विजयरूपं त्रिपुरावदानं तत्संगीयमानं स्तूयमानं यस्य स तथोक्तः । 'अवदानं कर्म वृत्तम्' इत्यमरः । ध्वान्तं तमः । मोह इति यावत् । तद्विकरेण रागादिना लङ्घ्योऽभिभवनीयो न भवतीत्यध्वान्तविकारलङ्घ्यः । विवाहादिकं तु तस्य लीलेत्यर्थः । ताराधिपखण्डधारी चन्द्रशेखरः शंभुरध्वानं मार्गं ततारात्यगच्छत् ॥ 7.48 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
