--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/08.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/08.md
@@ -414,7 +414,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-तामिति । वधूरात्मसदृशं स्वानुरुपं वरं वोढारं प्रति यथान्वरज्यतानुरक्ताभूत् । रञ्जेर्दैवादिकात्कर्तरि लकारः । स्वरितत्वादात्मनेपदम् । तथैव वरोऽपि नवोढोप्यात्मनः सदृक्तामात्मसदृशम् । 'त्यदादिषु दृशोऽनालोचने कञ्च' इति चकारात्क्विप्प्रत्ययः । तां वधूं प्रत्यन्वरज्यत वध्वामनुरक्तोऽभूदित्यर्थः । 'गत्यर्थाकर्मकश्लिषशीङ्स्थासवसजनरुहजीर्यतिभ्यश्य' इत्यनेन सकर्मकत्वम् । दृष्टान्तमाह-- जाह्नवी गङ्गा सागरन्नापगच्छतीत्यनपगानपेता हि सोऽपि सागरस्तस्या जाह्नव्या मुखरसेनाग्रसलिलेन वक्वास्वादेनैका मुख्या निर्वृतिरानन्दो यस्य स तथोक्तः । अत्र दृष्टान्तालंकारः । लक्षणं तूक्तम् इर्त्थं समानानुरागकथनाद्रसाभासत्वं निरस्तम् । तदुक्तम्-- (योषितो बहुसक्तिश्चोद्रसाभासः स उच्यते) । कविनाप्युक्तं मालविकायाम्-- (अनातुरोक्तं प्रति विप्रसिद्धता समीपगेनापि रतिर्न मां प्रति । परस्परप्राप्तिनिराशयोर्वा शरीरनाशोऽपि समानरागयोः ।) इति ॥ 8.16 ॥
+तामिति । वधूरात्मसदृशं स्वानुरूपं वरं वोढारं प्रति यथान्वरज्यतानुरक्ताभूत् । रञ्जेर्दैवादिकात्कर्तरि लकारः । स्वरितत्वादात्मनेपदम् । तथैव वरोऽपि नवोढोप्यात्मनः सदृक्तामात्मसदृशम् । 'त्यदादिषु दृशोऽनालोचने कञ्च' इति चकारात्क्विप्प्रत्ययः । तां वधूं प्रत्यन्वरज्यत वध्वामनुरक्तोऽभूदित्यर्थः । 'गत्यर्थाकर्मकश्लिषशीङ्स्थासवसजनरुहजीर्यतिभ्यश्य' इत्यनेन सकर्मकत्वम् । दृष्टान्तमाह-- जाह्नवी गङ्गा सागरन्नापगच्छतीत्यनपगानपेता हि सोऽपि सागरस्तस्या जाह्नव्या मुखरसेनाग्रसलिलेन वक्वास्वादेनैका मुख्या निर्वृतिरानन्दो यस्य स तथोक्तः । अत्र दृष्टान्तालंकारः । लक्षणं तूक्तम् इर्त्थं समानानुरागकथनाद्रसाभासत्वं निरस्तम् । तदुक्तम्-- (योषितो बहुसक्तिश्चोद्रसाभासः स उच्यते) । कविनाप्युक्तं मालविकायाम्-- (अनातुरोक्तं प्रति विप्रसिद्धता समीपगेनापि रतिर्न मां प्रति । परस्परप्राप्तिनिराशयोर्वा शरीरनाशोऽपि समानरागयोः ।) इति ॥ 8.16 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -886,7 +886,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-एष इति । हे पीवरोरु, एष वृक्षशिखरे वृक्षाग्रे कृतस्थितिजातरुपरसगौरमण्डल आतपरुषणात्काञ्चनद्रवदरुणवर्हमण्‍लः । 'चामीकरं जातरुपं महारजतकाञ्चने' । इत्यमरः । बर्हमस्यास्तीति बर्हिणो मयूरः । 'फलबर्हाभ्यामिनज्वक्तव्यः' हीयमानं क्षीयमाणमहरत्ययातपं दिनान्तातपं पिबतीव । कथमन्यथा क्षीयमाणत्वमिति भावः ॥ 8.36 ॥
+एष इति । हे पीवरोरु, एष वृक्षशिखरे वृक्षाग्रे कृतस्थितिजातरुपरसगौरमण्डल आतपरुषणात्काञ्चनद्रवदरुणवर्हमण्‍लः । 'चामीकरं जातरूपं महारजतकाञ्चने' । इत्यमरः । बर्हमस्यास्तीति बर्हिणो मयूरः । 'फलबर्हाभ्यामिनज्वक्तव्यः' हीयमानं क्षीयमाणमहरत्ययातपं दिनान्तातपं पिबतीव । कथमन्यथा क्षीयमाणत्वमिति भावः ॥ 8.36 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1496,7 +1496,7 @@ title = "०८"
 
 <details><summary>मल्लिनाथः</summary>
 
-शक्यमिति । नवोदयाः सद्य उत्पादिता अप्रगल्भयवसूचिकोमला अकठोरयवाङ्करसुकुमारा ओषदिपतेरिन्दोः करास्तव कर्णपूररचनाकृते कर्णावतंसनिर्माणक्रियायां । संपदादित्वाद्भावे क्विप् । अग्रनखसंपुटैर्नखाग्रसंभेदैश्छेत्तुं शक्यम् । शक्या इत्यर्थः । 'शकिसहोश्च' । इति कर्मणि यत्प्रत्ययः । शक्यमिति विपरीतलिङ्गवचनस्यापि सामान्योपक्रमात्कर्माभिधायकत्वम् । पश्चात्कर्मविशेषाकाङ्क्षायां करा इति निर्देशो न विरुध्यते । यथाह वामनः- 'शक्यमिति रुपं लिङ्गवचनस्यापि सामान्योपक्रमत्वादिति । अत्र प्रमाणम्-शक्यं श्वमांसेनापि क्षुत्प्रतिहन्तुमिति भाष्यकारप्रयोगः, इति ॥ 8.62 ॥
+शक्यमिति । नवोदयाः सद्य उत्पादिता अप्रगल्भयवसूचिकोमला अकठोरयवाङ्करसुकुमारा ओषदिपतेरिन्दोः करास्तव कर्णपूररचनाकृते कर्णावतंसनिर्माणक्रियायां । संपदादित्वाद्भावे क्विप् । अग्रनखसंपुटैर्नखाग्रसंभेदैश्छेत्तुं शक्यम् । शक्या इत्यर्थः । 'शकिसहोश्च' । इति कर्मणि यत्प्रत्ययः । शक्यमिति विपरीतलिङ्गवचनस्यापि सामान्योपक्रमात्कर्माभिधायकत्वम् । पश्चात्कर्मविशेषाकाङ्क्षायां करा इति निर्देशो न विरुध्यते । यथाह वामनः- 'शक्यमिति रूपं लिङ्गवचनस्यापि सामान्योपक्रमत्वादिति । अत्र प्रमाणम्-शक्यं श्वमांसेनापि क्षुत्प्रतिहन्तुमिति भाष्यकारप्रयोगः, इति ॥ 8.62 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
