--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/09.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/09.md
@@ -384,25 +384,25 @@ title = "०९"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 दक्षस्य शापेन शशी (4)क्षयीव (5)प्लुष्टो हिमेनेव सरोजकोशः ।  
-वहन्विरुपं वपुरुग्ररेतश्चयेन वह्निः किल निर्जगाम ॥ 9.17 ॥  
+वहन्विरूपं वपुरुग्ररेतश्चयेन वह्निः किल निर्जगाम ॥ 9.17 ॥  
 {4.क्षयाय,5.प्रुष्टः,आलोकनतः.}  
 </details>
 
 <details><summary>मूलम्</summary>
 
 दक्षस्य शापेन शशी (4)क्षयीव (5)प्लुष्टो हिमेनेव सरोजकोशः ।  
-वहन्विरुपं वपुरुग्ररेतश्चयेन वह्निः किल निर्जगाम ॥ 9.17 ॥  
+वहन्विरूपं वपुरुग्ररेतश्चयेन वह्निः किल निर्जगाम ॥ 9.17 ॥  
 {4.क्षयाय,5.प्रुष्टः,आलोकनतः.}  
 </details>
 
 <details><summary>अन्वयः</summary>
 
-वह्निः धक्षस्य शापेन क्षयी शशी इव, हिमेन प्लुष्टः सरोजकोश इव, उग्ररेतश्चयेन विरुपं वपुः वहन् निजंगाम ।  
+वह्निः धक्षस्य शापेन क्षयी शशी इव, हिमेन प्लुष्टः सरोजकोश इव, उग्ररेतश्चयेन विरूपं वपुः वहन् निजंगाम ।  
 </details>
 
 <details><summary>सीतारामः</summary>
 
-दक्षस्येति । वह्निरग्निर्दक्षस्य शापेन हेतुना क्षयी क्षयरोगवान् शशी चन्द्र इव । तथा हिमेन शीतेन प्लुष्टो दग्धः । 'प्लुष दाहे' कर्मणि निष्ठा । सरोजकोश इव । वपुः स्वशरीरमुग्रस्य शिवस्य । 'उग्रः कपर्दी श्रीकण्ठः' इत्यमरः । रेतश्चयेन वीर्यसङ्घातेन । 'शुक्र तेजोरेतसी च' इत्यमरः । हेतुभूतेन विरुपं भ्रष्टशोभमेतादृशं वहन्निर्जगाम सम्भोगवेश्मतो निःसृतवान् । किलेति प्रसिद्धे ॥ 9.17 ॥
+दक्षस्येति । वह्निरग्निर्दक्षस्य शापेन हेतुना क्षयी क्षयरोगवान् शशी चन्द्र इव । तथा हिमेन शीतेन प्लुष्टो दग्धः । 'प्लुष दाहे' कर्मणि निष्ठा । सरोजकोश इव । वपुः स्वशरीरमुग्रस्य शिवस्य । 'उग्रः कपर्दी श्रीकण्ठः' इत्यमरः । रेतश्चयेन वीर्यसङ्घातेन । 'शुक्र तेजोरेतसी च' इत्यमरः । हेतुभूतेन विरूपं भ्रष्टशोभमेतादृशं वहन्निर्जगाम सम्भोगवेश्मतो निःसृतवान् । किलेति प्रसिद्धे ॥ 9.17 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -474,7 +474,7 @@ title = "०९"
 
 <details><summary>सीतारामः</summary>
 
-मन्देनेति । हरः शिवः । मन्देन लघुप्रचारेण । तथा खिन्ना अलसप्रयोगेणोदासोना अङ्गुलयो यस्य । तथा कम्प्रेण कम्पशीलेन । 'नमिकम्पिस्म्यजसकमे'- ति रः । करेण कृत्वा तस्याः पार्वत्या वदनारविन्दाद् धर्मस्य धर्मरुपं वा जलं परामृशन्विश्लेषयन्सहेलं सक्रीडं यथा तथा व्यजनस्यानिलेन कृत्वा जहार ॥ 9.20 ॥
+मन्देनेति । हरः शिवः । मन्देन लघुप्रचारेण । तथा खिन्ना अलसप्रयोगेणोदासोना अङ्गुलयो यस्य । तथा कम्प्रेण कम्पशीलेन । 'नमिकम्पिस्म्यजसकमे'- ति रः । करेण कृत्वा तस्याः पार्वत्या वदनारविन्दाद् धर्मस्य धर्मरूपं वा जलं परामृशन्विश्लेषयन्सहेलं सक्रीडं यथा तथा व्यजनस्यानिलेन कृत्वा जहार ॥ 9.20 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -542,7 +542,7 @@ title = "०९"
 
 <details><summary>सीतारामः</summary>
 
-रथस्येति । स हरः । कर्णावभि कर्णसंमुखे तन्मुखस्य पार्वतीमुखरुपस्य रथस्य सम्बन्धि ताटङ्करुपं चक्रद्वितयं चक्रद्वियं न्यधात् । यतो विषमेपुरेष पुष्पचापः कामो जगज्जिगीषुस्त्रिभुवनविजयेच्छुः सन् यमारोहति । ध्रुवं निश्चितम् । मुखरुपिणं रथमारुह्य जगन्ति विजेतुमिच्छति काम इति भावः ॥ 9.23 ॥
+रथस्येति । स हरः । कर्णावभि कर्णसंमुखे तन्मुखस्य पार्वतीमुखरुपस्य रथस्य सम्बन्धि ताटङ्करूपं चक्रद्वितयं चक्रद्वियं न्यधात् । यतो विषमेपुरेष पुष्पचापः कामो जगज्जिगीषुस्त्रिभुवनविजयेच्छुः सन् यमारोहति । ध्रुवं निश्चितम् । मुखरुपिणं रथमारुह्य जगन्ति विजेतुमिच्छति काम इति भावः ॥ 9.23 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -758,7 +758,7 @@ title = "०९"
 
 <details><summary>सीतारामः</summary>
 
-व्यधुरिति । बहिः प्रदेशे वैतालिका बन्दिनश्चित्रेण चरित्रेण चारु मनोहरं मङ्गलरुपं गानम् गीतमित्यर्थः । उच्चैरुच्चस्वरेण व्यधुश्चक्रुः । तथा गन्धर्वगणाश्च पिनाकपाणेर्हरस्य प्रमोदायानन्दाय । 'प्रमोदामोदसंमदाः' इत्यमरः । सशङ्खस्वनं पाञ्चजन्यशब्दसहितं यथा तथा जगुः । गायन्ति स्मेत्यर्थः ॥ 9.32 ॥
+व्यधुरिति । बहिः प्रदेशे वैतालिका बन्दिनश्चित्रेण चरित्रेण चारु मनोहरं मङ्गलरूपं गानम् गीतमित्यर्थः । उच्चैरुच्चस्वरेण व्यधुश्चक्रुः । तथा गन्धर्वगणाश्च पिनाकपाणेर्हरस्य प्रमोदायानन्दाय । 'प्रमोदामोदसंमदाः' इत्यमरः । सशङ्खस्वनं पाञ्चजन्यशब्दसहितं यथा तथा जगुः । गायन्ति स्मेत्यर्थः ॥ 9.32 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1942,7 +1942,7 @@ title = "०९"
 
 <details><summary>सीतारामः</summary>
 
-विष्णिवति । पुनश्च विष्णुपादोदकोद्भूतोत्पन्ना विष्णुपादोदकमेवास्या जन्महेतुरित्यर्थः । विष्णुपादोदकमोवोद्भूतं रुपं यस्याः सेति वा । पुनश्च ब्रह्मलोकादुपागतेहागता पुनश्च त्रिभिः स्त्रोतोभिः प्रवाहैर्भुवनत्रयं स्वर्गमृत्युपाताललक्षणमश्रान्तं निष्परिश्रमं यथा भवति तथा पुनाना । पवित्रीकुर्वाणेत्यर्थः । अथ एव त्रिस्त्रोता इति नाम दधतीर्यर्थः । 'पूञ्पवने', शानच् श्नाप्रत्ययश्च ॥ 10.31 ॥
+विष्णिवति । पुनश्च विष्णुपादोदकोद्भूतोत्पन्ना विष्णुपादोदकमेवास्या जन्महेतुरित्यर्थः । विष्णुपादोदकमोवोद्भूतं रूपं यस्याः सेति वा । पुनश्च ब्रह्मलोकादुपागतेहागता पुनश्च त्रिभिः स्त्रोतोभिः प्रवाहैर्भुवनत्रयं स्वर्गमृत्युपाताललक्षणमश्रान्तं निष्परिश्रमं यथा भवति तथा पुनाना । पवित्रीकुर्वाणेत्यर्थः । अथ एव त्रिस्त्रोता इति नाम दधतीर्यर्थः । 'पूञ्पवने', शानच् श्नाप्रत्ययश्च ॥ 10.31 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
