--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/10.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/10.md
@@ -74,7 +74,7 @@ title = "१०"
 
 <details><summary>सीतारामः</summary>
 
-भागीरथीति । आनन्दबाष्पैराकुललोचनानां व्याप्तनेत्राणाम् । पावकश्च कृत्तिकाश्च पावककृत्तिकाः । भाघीरथ्या गङ्गया सहिता याः पावककृत्तिकास्तासां सम्बन्धि दिव्यं लोकोत्तरस्वरुपं तं नन्दनं पुत्रमुपात्तुं ग्रहीतुं परस्परमन्योन्यं प्रौढतरोऽतिशयितो विवादः कलह आसीत् । ममायं ममायमिति प्रवादपूर्वकः कलिर्बभूवेत्यर्थः ॥ 11.3 ॥
+भागीरथीति । आनन्दबाष्पैराकुललोचनानां व्याप्तनेत्राणाम् । पावकश्च कृत्तिकाश्च पावककृत्तिकाः । भाघीरथ्या गङ्गया सहिता याः पावककृत्तिकास्तासां सम्बन्धि दिव्यं लोकोत्तरस्वरूपं तं नन्दनं पुत्रमुपात्तुं ग्रहीतुं परस्परमन्योन्यं प्रौढतरोऽतिशयितो विवादः कलह आसीत् । ममायं ममायमिति प्रवादपूर्वकः कलिर्बभूवेत्यर्थः ॥ 11.3 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
