--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/11.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/11.md
@@ -556,12 +556,12 @@ title = "११"
 
 <details><summary>अन्वयः</summary>
 
-दृशां सहस्त्रेण महेशं दृष्ट्वा महेन्द्रः अतितरां कृताऽर्थः अभूत् । अथो तत् सर्वाऽङ्गजातं विरुपं प्रियाकोपकरम् इव विवेद ।  
+दृशां सहस्त्रेण महेशं दृष्ट्वा महेन्द्रः अतितरां कृताऽर्थः अभूत् । अथो तत् सर्वाऽङ्गजातं विरूपं प्रियाकोपकरम् इव विवेद ।  
 </details>
 
 <details><summary>सीतारामः</summary>
 
-दृष्ट्वेति । दृशां सहस्त्रेण महेशं शिवं दृष्ट्वा महेन्द्र इन्द्रोऽतितरामतिशयं कृतार्थः कृतकृत्योऽभूत् । अथोऽनन्तरं तत्सर्वाङ्गजातं सर्वेष्वङ्गेषु भूतं विरुपं रोमाञ्चजनितवैरुप्यं प्रियायाः शच्याः कोपकरं क्रोधविधायीव विवेद जज्ञे । सपत्नीसम्बन्धजनितत्वशङ्काकुलत्वादिति भावः ॥ 12.24 ॥
+दृष्ट्वेति । दृशां सहस्त्रेण महेशं शिवं दृष्ट्वा महेन्द्र इन्द्रोऽतितरामतिशयं कृतार्थः कृतकृत्योऽभूत् । अथोऽनन्तरं तत्सर्वाङ्गजातं सर्वेष्वङ्गेषु भूतं विरूपं रोमाञ्चजनितवैरुप्यं प्रियायाः शच्याः कोपकरं क्रोधविधायीव विवेद जज्ञे । सपत्नीसम्बन्धजनितत्वशङ्काकुलत्वादिति भावः ॥ 12.24 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -613,7 +613,7 @@ title = "११"
 
 <details><summary>सीतारामः</summary>
 
-श्रीति । इतीति । अथ नन्दी गणः पुरतः सर्वेभ्योऽग्रगामितयेन्द्राधिष्ठितकक्षामारभ्य महेश्वराधिश्रितमन्दिरपर्यन्तमहंपूर्विकया । बहुविधगणगणसुरगणावृत्ते मध्यगतदेशेऽहंपूर्विकावलम्बेनेति तात्पर्यार्थः । प्रसादस्येन्द्रागमनिवेदनमुदन्धेनान्धकारिणा दत्तपारितोषिकरुपस्य पात्रं योग्यो भविष्णुर्भवितुमिच्छुः सन्नेत्य । अन्तरिति शेषः । तथा कक्षां द्वारमभि संमुखं हेमवेत्रं सौवर्णयष्टिकां निधाय संस्थाप्य । इयं वेत्रधारिणो रीतिर्वर्णिता । प्रबद्धाञ्जलिः सन्स्मरारातिं महेश्वरम् । भो श्रीयुक्तनीलकण्ठ सपार्वतीक महेश्वर । द्युपतिरिन्द्रस्त्वयि भवति प्रणामावसरं प्रणतिसमयं प्रतीच्छन्प्रतीक्षमाणः पुरोऽग्रेऽस्ति विद्यते । महेश्वरं प्रणिनंसुः सन्बहिरास्त इत्यर्थः । अतो हे त्रिनेत्र, भो महेश, अत्र पुरोवतिंनि सहस्त्रनेत्र इन्द्रे दृष्ट्या दर्शनेन प्रसादप्रगुणः प्रसादविधानानुकूलो भव । आत्मीयदर्शनरुपं प्रसादं तदुपरि कुर्वित्यर्थः । इत्येवंभूतां वाचमुवाचोक्तवान् ॥ 12.26 - 12.27 ॥
+श्रीति । इतीति । अथ नन्दी गणः पुरतः सर्वेभ्योऽग्रगामितयेन्द्राधिष्ठितकक्षामारभ्य महेश्वराधिश्रितमन्दिरपर्यन्तमहंपूर्विकया । बहुविधगणगणसुरगणावृत्ते मध्यगतदेशेऽहंपूर्विकावलम्बेनेति तात्पर्यार्थः । प्रसादस्येन्द्रागमनिवेदनमुदन्धेनान्धकारिणा दत्तपारितोषिकरुपस्य पात्रं योग्यो भविष्णुर्भवितुमिच्छुः सन्नेत्य । अन्तरिति शेषः । तथा कक्षां द्वारमभि संमुखं हेमवेत्रं सौवर्णयष्टिकां निधाय संस्थाप्य । इयं वेत्रधारिणो रीतिर्वर्णिता । प्रबद्धाञ्जलिः सन्स्मरारातिं महेश्वरम् । भो श्रीयुक्तनीलकण्ठ सपार्वतीक महेश्वर । द्युपतिरिन्द्रस्त्वयि भवति प्रणामावसरं प्रणतिसमयं प्रतीच्छन्प्रतीक्षमाणः पुरोऽग्रेऽस्ति विद्यते । महेश्वरं प्रणिनंसुः सन्बहिरास्त इत्यर्थः । अतो हे त्रिनेत्र, भो महेश, अत्र पुरोवतिंनि सहस्त्रनेत्र इन्द्रे दृष्ट्या दर्शनेन प्रसादप्रगुणः प्रसादविधानानुकूलो भव । आत्मीयदर्शनरूपं प्रसादं तदुपरि कुर्वित्यर्थः । इत्येवंभूतां वाचमुवाचोक्तवान् ॥ 12.26 - 12.27 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -637,7 +637,7 @@ title = "११"
 
 <details><summary>सीतारामः</summary>
 
-पुरेति । ततोऽनन्तरं निवेदनानन्तरं त्रिलोकसेव्यस्त्रैलोक्यपूजनीयस्त्रिपुरासुरस्यारिः शत्रुर्महेश्वरः सुरसङ्घेन देवसमूहेन सेव्यं पूज्यं सुरेन्द्रमिन्द्रं पुरा प्रथमं प्रीत्या निमित्तेन सुधासारम् । अमृततुल्यमित्यर्थः । निधारयति नितरां धारारुपं करोति । 'तत्करोति-' इति करोत्यर्थे णिच् । सुधासारधारां वर्षतेत्यर्थः । एवंभूतेनेव विलोकनेन दर्शनेनः नुजग्राह । तदुपर्यनुग्रहमकार्षीदित्यर्थः स्वामिनां प्रसादपूर्वकमलोकनमेव भृत्यानामुपरि महानुग्रह इति भावः ॥ 12.28 ॥
+पुरेति । ततोऽनन्तरं निवेदनानन्तरं त्रिलोकसेव्यस्त्रैलोक्यपूजनीयस्त्रिपुरासुरस्यारिः शत्रुर्महेश्वरः सुरसङ्घेन देवसमूहेन सेव्यं पूज्यं सुरेन्द्रमिन्द्रं पुरा प्रथमं प्रीत्या निमित्तेन सुधासारम् । अमृततुल्यमित्यर्थः । निधारयति नितरां धारारूपं करोति । 'तत्करोति-' इति करोत्यर्थे णिच् । सुधासारधारां वर्षतेत्यर्थः । एवंभूतेनेव विलोकनेन दर्शनेनः नुजग्राह । तदुपर्यनुग्रहमकार्षीदित्यर्थः स्वामिनां प्रसादपूर्वकमलोकनमेव भृत्यानामुपरि महानुग्रह इति भावः ॥ 12.28 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
