--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/12.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/12.md
@@ -748,7 +748,7 @@ continue to august
 
 <details><summary>सीतारामः</summary>
 
-उपेत्येति । भक्तिपरो भक्तिप्रवणः कुमारः कार्त्तिकेयो गीर्वाणवृन्दैर्देवसमूहैः प्रणुतां प्रकर्षेण स्तुताम् । 'णु स्तुतौ' इति धातोः कर्मणि क्तः । तां मन्दाकिनीं तत्रोपेत्य । तत्समीपं गत्वेत्यर्थः । किरीटकोटौ मुकुटाग्रे । 'कोटिः स्त्री धनुषोऽग्रेऽस्त्रौ' इति मेदिनी । अत्राग्रशब्दस्य धनुःशब्दोपलक्षिततया सर्वेषामग्रवाचकत्वं बोध्यम् । न्यस्तोऽञ्जलिर्येन तथाभूतः सन् । प्रणुत्येडयित्वा मुदितो मुमुदे । इदं कृदन्तरुपं क्रियापदम् । तथा नम्रेण मूर्ध्ना शिरसा ववन्दे नमश्चक्रे ॥ 13.31 ॥
+उपेत्येति । भक्तिपरो भक्तिप्रवणः कुमारः कार्त्तिकेयो गीर्वाणवृन्दैर्देवसमूहैः प्रणुतां प्रकर्षेण स्तुताम् । 'णु स्तुतौ' इति धातोः कर्मणि क्तः । तां मन्दाकिनीं तत्रोपेत्य । तत्समीपं गत्वेत्यर्थः । किरीटकोटौ मुकुटाग्रे । 'कोटिः स्त्री धनुषोऽग्रेऽस्त्रौ' इति मेदिनी । अत्राग्रशब्दस्य धनुःशब्दोपलक्षिततया सर्वेषामग्रवाचकत्वं बोध्यम् । न्यस्तोऽञ्जलिर्येन तथाभूतः सन् । प्रणुत्येडयित्वा मुदितो मुमुदे । इदं कृदन्तरूपं क्रियापदम् । तथा नम्रेण मूर्ध्ना शिरसा ववन्दे नमश्चक्रे ॥ 13.31 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
