--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/13.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/13.md
@@ -141,7 +141,7 @@ title = "१३"
 
 <details><summary>सीतारामः</summary>
 
-तमिति । विरोधिनस्तारकस्य विद्विषेण वेरेण हेतुना या रुट् क्रोधस्तया निमित्तेनाधिकं ज्वलन्प्रदीप्यमानः शिख्यग्निगिरेः श्रृङ्गस्य सोदरं सदृशम् । तद्वद्विशालमित्यर्थः । तथा मदेन गर्वेण । 'मदो रेतसि कस्तूर्यां गर्वे हर्षेभदानयोः' । इति मेदिनी । उद्धतं मेषं पशुविशेषं लोके 'मेढा' इति ख्यातमधिष्ठितोऽधिरुढः तथा महसा तेजसा महीयस्तरमतिशयं महदायुधं शस्त्रं दधत् । अथवा 'महो महीयस्तरम्' इति छेदः । महस्तेजोरुपं महीयस्तरमायुधमिति व्याख्यातव्यम् । दधत्सन् । तं कुमारमन्वगच्छदनुगतवान् । अत्राप्यभ्यगच्छदित्यसाधु बोध्यम् ॥ 14.6 ॥
+तमिति । विरोधिनस्तारकस्य विद्विषेण वेरेण हेतुना या रुट् क्रोधस्तया निमित्तेनाधिकं ज्वलन्प्रदीप्यमानः शिख्यग्निगिरेः श्रृङ्गस्य सोदरं सदृशम् । तद्वद्विशालमित्यर्थः । तथा मदेन गर्वेण । 'मदो रेतसि कस्तूर्यां गर्वे हर्षेभदानयोः' । इति मेदिनी । उद्धतं मेषं पशुविशेषं लोके 'मेढा' इति ख्यातमधिष्ठितोऽधिरुढः तथा महसा तेजसा महीयस्तरमतिशयं महदायुधं शस्त्रं दधत् । अथवा 'महो महीयस्तरम्' इति छेदः । महस्तेजोरूपं महीयस्तरमायुधमिति व्याख्यातव्यम् । दधत्सन् । तं कुमारमन्वगच्छदनुगतवान् । अत्राप्यभ्यगच्छदित्यसाधु बोध्यम् ॥ 14.6 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
