--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/14.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/14.md
@@ -510,7 +510,7 @@ title = "१४"
 
 <details><summary>सीतारामः</summary>
 
-ज्वलद्भिरिति । नभस्तलम् । निरम्बुदं सदिति शेषः । ज्वलद्भिरङ्गारचयैः काष्ठशकलसमूहैः । तथा शोणितास्थिभिश्च सह गाढं दृढम् । बह्खिति यावत् । ववष । ज्वलदङ्गाररुधिरास्थिगभिंतं जलं ववर्षेत्यर्थः । अम्बुदसांनिध्याभावेऽपि वृष्ठिरेकादशतमोऽयमुत्पातः । साप्यङ्गारादिमिश्रितेति द्वादशतमः । अत एव ज्वलन्त्यो दिशो रासभकण्ठधूसरं खरगलसदृशधूसरवर्णम् । 'रासभो गर्दभे क्षुद्रजन्तुरोगप्रभेदयोः' । इति मेदिनी । धूमं धूमरुपं रजोरेणुं रजोरेणुं मुखैः प्रारम्भप्रदेशैर्व्यसृर्जस्तत्यजुः । त्रयोदशतमोऽयमुत्पातः ॥ 15.21 ॥
+ज्वलद्भिरिति । नभस्तलम् । निरम्बुदं सदिति शेषः । ज्वलद्भिरङ्गारचयैः काष्ठशकलसमूहैः । तथा शोणितास्थिभिश्च सह गाढं दृढम् । बह्खिति यावत् । ववष । ज्वलदङ्गाररुधिरास्थिगभिंतं जलं ववर्षेत्यर्थः । अम्बुदसांनिध्याभावेऽपि वृष्ठिरेकादशतमोऽयमुत्पातः । साप्यङ्गारादिमिश्रितेति द्वादशतमः । अत एव ज्वलन्त्यो दिशो रासभकण्ठधूसरं खरगलसदृशधूसरवर्णम् । 'रासभो गर्दभे क्षुद्रजन्तुरोगप्रभेदयोः' । इति मेदिनी । धूमं धूमरूपं रजोरेणुं रजोरेणुं मुखैः प्रारम्भप्रदेशैर्व्यसृर्जस्तत्यजुः । त्रयोदशतमोऽयमुत्पातः ॥ 15.21 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -656,7 +656,7 @@ title = "१४"
 
 <details><summary>सीतारामः</summary>
 
-क्षिताविति । प्रतिकूलवायुना प्रतीपपवनेन क्षितौ पृथिव्यां निरस्तं निक्षिप्तम् । 'असु क्षेपणे' इत्यतः कर्मणि निष्ठा । तदीयं तारकसम्बन्धिनो चामीकरस्य हेम्नः । 'चामीकरं जातरुपं महारजतकाञ्चने' । इत्यमरः । घर्मवारणं छत्त्रं मृत्योर्यमस्य सम्बन्धिनि पारणाविधौ । भोजनक्रियानिमित्तमित्यर्थः । 'निमित्तात्कर्मयोगे' इति सप्तमी । योगोऽत्र संयोगः । प्रकल्पितं निर्मितं महद्विशालं हाटकभाजनं सुवर्णपात्रमिवेत्युत्प्रेक्षा । रराज शुशुभे ॥ 15.27 ॥
+क्षिताविति । प्रतिकूलवायुना प्रतीपपवनेन क्षितौ पृथिव्यां निरस्तं निक्षिप्तम् । 'असु क्षेपणे' इत्यतः कर्मणि निष्ठा । तदीयं तारकसम्बन्धिनो चामीकरस्य हेम्नः । 'चामीकरं जातरूपं महारजतकाञ्चने' । इत्यमरः । घर्मवारणं छत्त्रं मृत्योर्यमस्य सम्बन्धिनि पारणाविधौ । भोजनक्रियानिमित्तमित्यर्थः । 'निमित्तात्कर्मयोगे' इति सप्तमी । योगोऽत्र संयोगः । प्रकल्पितं निर्मितं महद्विशालं हाटकभाजनं सुवर्णपात्रमिवेत्युत्प्रेक्षा । रराज शुशुभे ॥ 15.27 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
