--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/16.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/16.md
@@ -221,7 +221,7 @@ title = "१६"
 
 <details><summary>सीतारामः</summary>
 
-उद्दीप्तेति । मुक्ता इति च । अथ नागापाशविमोचनानन्तरम् । उद्दीप्तः प्रदीप्तः कोप एव दहनोऽग्निर्यस्य । तथा चण्डौ प्रचण्डौ बाहू यस्य । एवंभूतः सुरेन्द्रशात्रुस्तारकोऽह्नाय झटिति 'भो सारथे' मया प्रसह्य बलाद्वद्धा नागपाशवशीकृताः सुरपतिप्रमुखा इन्द्रादयो देवा बालस्य शिशोः, न तु यूनः धूर्जटिसुतस्य शिवपुत्रस्य निरोक्षणेन दर्शनमात्रेण, न तु प्रत्यस्त्रादिप्रयत्नेन, मुक्ता बभूवुः । अनेन शिशुनात्मनिराक्षणेनैव स्वपक्षवर्तिनो देवा मोचिता अतो महाधन्योऽयमिति भावः । तत्तस्मान्मदोवशत्रूणां पक्षवृत्तित्वेन कृतनागपाशमोवनरुपापराओधादिमान्पुरोवर्तिन इन्द्रादिदेवान्विहाय पिरत्यज्य । आहवाय । मया सहाहवं कर्तुपित्यर्थः । दर्पितमभिमानमूलकं भुजाबलं बाहुबलं बाहुवीर्य यस्य न तु तत्वतः, तथाभूतममुं पुरोवर्तिनं शम्भुसूनुं द्रष्टास्मि द्क्ष्यामि । लुट उतमैकवचनम् । अथ च समरभमौ संग्रामभुवि ये पशवो गृध्रादयस्तेषामुपहारमुपदारुपं कर्तास्मि करिष्यामि । प्रगवलोकितमेनमत्र हत्वा संङ्ग्रामभूमिस्थेभ्यो विहङ्गेभ्योऽत्तुं विभज्य दास्यामीत्यर्थः । तत्तस्मादेवंकार्यत्वात्सपदि सद्य एव स्यन्दनं रथं वाहय प्रापय । अवश्यकर्तव्ये विलम्बानौचित्यादिति भावः । इति सार्धैकपद्योक्तं सारथिमवोचत जगाद । 'नियन्ता प्राजिता यन्ता सूतः क्षता च सारथिः' इत्यमरः ॥ 17.8 - 17.9 ॥
+उद्दीप्तेति । मुक्ता इति च । अथ नागापाशविमोचनानन्तरम् । उद्दीप्तः प्रदीप्तः कोप एव दहनोऽग्निर्यस्य । तथा चण्डौ प्रचण्डौ बाहू यस्य । एवंभूतः सुरेन्द्रशात्रुस्तारकोऽह्नाय झटिति 'भो सारथे' मया प्रसह्य बलाद्वद्धा नागपाशवशीकृताः सुरपतिप्रमुखा इन्द्रादयो देवा बालस्य शिशोः, न तु यूनः धूर्जटिसुतस्य शिवपुत्रस्य निरोक्षणेन दर्शनमात्रेण, न तु प्रत्यस्त्रादिप्रयत्नेन, मुक्ता बभूवुः । अनेन शिशुनात्मनिराक्षणेनैव स्वपक्षवर्तिनो देवा मोचिता अतो महाधन्योऽयमिति भावः । तत्तस्मान्मदोवशत्रूणां पक्षवृत्तित्वेन कृतनागपाशमोवनरुपापराओधादिमान्पुरोवर्तिन इन्द्रादिदेवान्विहाय पिरत्यज्य । आहवाय । मया सहाहवं कर्तुपित्यर्थः । दर्पितमभिमानमूलकं भुजाबलं बाहुबलं बाहुवीर्य यस्य न तु तत्वतः, तथाभूतममुं पुरोवर्तिनं शम्भुसूनुं द्रष्टास्मि द्क्ष्यामि । लुट उतमैकवचनम् । अथ च समरभमौ संग्रामभुवि ये पशवो गृध्रादयस्तेषामुपहारमुपदारूपं कर्तास्मि करिष्यामि । प्रगवलोकितमेनमत्र हत्वा संङ्ग्रामभूमिस्थेभ्यो विहङ्गेभ्योऽत्तुं विभज्य दास्यामीत्यर्थः । तत्तस्मादेवंकार्यत्वात्सपदि सद्य एव स्यन्दनं रथं वाहय प्रापय । अवश्यकर्तव्ये विलम्बानौचित्यादिति भावः । इति सार्धैकपद्योक्तं सारथिमवोचत जगाद । 'नियन्ता प्राजिता यन्ता सूतः क्षता च सारथिः' इत्यमरः ॥ 17.8 - 17.9 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -643,7 +643,7 @@ title = "१६"
 
 <details><summary>सीतारामः</summary>
 
-तत्रेति । अथानन्तरं तत्र कुमारे धीरतरं गम्भीरतातिशयशालि धाम तेजोऽधिकं दुःसहतरं दधति सति । 'अयं बालोऽपि मदपेक्षयाधिकतरधामवान् अथः शस्त्रयुद्धेन नैव धर्षणीय इति मनोविषयविचारकर्तृकता व्यज्यते । समरे युद्धे तरस्वी बलवान्महानसुराणामिन्द्रस्तारको मायामयं मायारुपं समरं युद्धमाशु सत्वरं रचयांचकार निर्ममे । शस्त्रेरधर्षणीयोऽयं मायाप्रधानैरस्त्रैः पराजयं प्राप्स्यतीति बुद्ध्या मायारचनापरो बभूवेत्यर्थः ।' यतो मायाप्रचारे मायानिर्माणे चतुरः कुशलः ॥ 17.24 ॥
+तत्रेति । अथानन्तरं तत्र कुमारे धीरतरं गम्भीरतातिशयशालि धाम तेजोऽधिकं दुःसहतरं दधति सति । 'अयं बालोऽपि मदपेक्षयाधिकतरधामवान् अथः शस्त्रयुद्धेन नैव धर्षणीय इति मनोविषयविचारकर्तृकता व्यज्यते । समरे युद्धे तरस्वी बलवान्महानसुराणामिन्द्रस्तारको मायामयं मायारूपं समरं युद्धमाशु सत्वरं रचयांचकार निर्ममे । शस्त्रेरधर्षणीयोऽयं मायाप्रधानैरस्त्रैः पराजयं प्राप्स्यतीति बुद्ध्या मायारचनापरो बभूवेत्यर्थः ।' यतो मायाप्रचारे मायानिर्माणे चतुरः कुशलः ॥ 17.24 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1007,7 +1007,7 @@ title = "१६"
 
 <details><summary>सीतारामः</summary>
 
-जज्वालेति । कल्पान्तकालस्य प्रलयकालस्य दहनोऽग्निस्तस्य प्रतिमेव प्रतिमा स्वरुपं यस्य । तथातुलो बहुलो वह्निः कीलाजालेर्ज्वालासमूहैः । 'वह्नेर्द्वयोर्ज्वालकीलावर्चिर्हेतिः । शखा स्त्रियाम्' इत्यमरः । अखिलानि समस्तानि विमलानि शुद्धान्याशामुखानि दिगग्राणि । तथा सकलं नभोऽपि व्योम च कपिलयन्पिशङ्गीकुर्वन्सुरसैनिकेषु मध्ये । 'यतश्च निर्धारणम्' इति सप्तमी । समन्तात्परितो जज्वाल दिदीपे ॥ 17.37 ॥
+जज्वालेति । कल्पान्तकालस्य प्रलयकालस्य दहनोऽग्निस्तस्य प्रतिमेव प्रतिमा स्वरूपं यस्य । तथातुलो बहुलो वह्निः कीलाजालेर्ज्वालासमूहैः । 'वह्नेर्द्वयोर्ज्वालकीलावर्चिर्हेतिः । शखा स्त्रियाम्' इत्यमरः । अखिलानि समस्तानि विमलानि शुद्धान्याशामुखानि दिगग्राणि । तथा सकलं नभोऽपि व्योम च कपिलयन्पिशङ्गीकुर्वन्सुरसैनिकेषु मध्ये । 'यतश्च निर्धारणम्' इति सप्तमी । समन्तात्परितो जज्वाल दिदीपे ॥ 17.37 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -1117,7 +1117,7 @@ title = "१६"
 
 <details><summary>सीतारामः</summary>
 
-घोरेति । घोराणि भयनकानि यान्यन्धकाराणि तमांसि तेषां निकरस्य समूहस्य प्रतिमेव प्रतिमा स्वरुपं यस्य । गाढान्धकारसदृशकान्तिरित्यर्थः । तथा युगान्तकालस्य योऽनलोऽग्निस्तस्य प्रबलोऽधिको वो धूमस्तेन सदृशः । तथा गर्जारवैर्गर्जनाघोषैः कृत्वाऽवनीधराणां पर्वंतानां श्रृङ्गाणि सानूनि विघटयन् स्फोटयन्मेघनिवहः पयोधरसमुदायो नभोऽन्ते व्योममध्ये घनं सान्द्रम्, नतु विरलतया । उज्जगामोदियाय ॥ 17.41 ॥
+घोरेति । घोराणि भयनकानि यान्यन्धकाराणि तमांसि तेषां निकरस्य समूहस्य प्रतिमेव प्रतिमा स्वरूपं यस्य । गाढान्धकारसदृशकान्तिरित्यर्थः । तथा युगान्तकालस्य योऽनलोऽग्निस्तस्य प्रबलोऽधिको वो धूमस्तेन सदृशः । तथा गर्जारवैर्गर्जनाघोषैः कृत्वाऽवनीधराणां पर्वंतानां श्रृङ्गाणि सानूनि विघटयन् स्फोटयन्मेघनिवहः पयोधरसमुदायो नभोऽन्ते व्योममध्ये घनं सान्द्रम्, नतु विरलतया । उज्जगामोदियाय ॥ 17.41 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
