--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
@@ -934,7 +934,7 @@ title = "०१"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-**नाग्रेन्द्र-हस्तास्** त्वचि कर्कशत्वाद्,  
+**नागेन्द्र-हस्तास्** त्वचि कर्कशत्वाद्,  
 एकान्त-शैत्यात् **कदली**-विशेषाः।  
 लब्ध्वापि लोके परिणाहि+++(=वैपुल्यवद्)+++ रूपं  
 जातास् **तद्-ऊर्वोर् उपमान-बाह्याः** ॥३६॥  
@@ -943,7 +943,7 @@ title = "०१"
 
 <details><summary>मूलम्</summary>
 
-नाग्रेन्द्रहस्तास्त्वचि कर्कशत्वादेकान्तशैत्यात्कदलीविशेषाः ।  
+नागेन्द्रहस्तास्त्वचि कर्कशत्वादेकान्तशैत्यात्कदलीविशेषाः ।  
 लब्ध्वापि लोके परिणाहि रूपं जातास्तदूर्वेरुपमानबाह्याः ॥ 1. 36 ॥   
 </details>
 
@@ -957,10 +957,14 @@ title = "०१"
 नागेन्द्रेति । नागेन्द्राणामैरावतादीनां हस्ताः करास्त्वचि चर्मणि कर्कशत्वात्कदलीविशेषा रामरम्भादय एकान्तशएत्यान्नियतशैत्याद्धेतोः लोके परिणाहि वैपुल्ययुक्तम् । 'परिणाहो विशालता' इत्यमरः । रूपं लब्ध्वापि । अपिशब्दात्करिकदलीमात्रस्य तादृक्परिणाहो नास्तीति भावः । तस्या ऊर्वोस्तदूर्वोरुपमानबाह्या जाता उपमानक्रियानर्हा बभृवुः । तदूर्वोन कार्कश्यं नाप्येकान्तशैत्यमिति भावः ॥ 1. 36 ॥
 </details>
 
+{{< figure src="../images/kAnchI-guNam_sAnubandham.jpg" title="" class="thumbnail">}}
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-एतावता नन्वनुमेयशोभि काञ्चीगुणस्थानमनिन्दितायाः ।  
-आरोपितं यद् गिरिशेन पश्चादनन्यनारीकमनीयमङ्कम् ॥ 1. 37 ॥   
+एतावता नन्व् अनुमेय-शोभि  
+काञ्ची-गुण-स्थानम् +++(नितम्बसहितम्)+++ अनिन्दितायाः।  
+**आरोपितं** यद् +++(तपस्विना)+++ **गिरिशेन** +++(अपि)+++ पश्चाद्  
+अनन्य-नारी-कमनीयम् **अङ्कम्**॥३७॥
 </details>
 
 <details><summary>मूलम्</summary>
